crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO macaddr8_data VALUES (7, '08002b010203');"
---
InsertStmt@0..53
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "macaddr8_data"
  Whitespace@25..26 " "
  SelectStmt@26..51
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..51
      AConst@34..35
        Iconst@34..35 "7"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..51
        Sconst@37..51 "'08002b010203'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

