crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '    08:00:2b:01:02:03'::macaddr8;"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    TypeCast@7..40
      AConst@7..30
        Sconst@7..30 "'    08:00:2b:01:02:03'"
      Typecast@30..32 "::"
      TypeName@32..40
        Ident@32..40 "macaddr8"
  Ascii59@40..41 ";"

